<resources>
    <string name="app_name">Message Sender</string>
    <string name="tab_conversas">Conversas</string>
    <string name="tab_status">Status</string>
    <string name="tab_chamadas">Chamadas</string>

    // Strings Tela Login e Cadastro
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="criarconta">Não tem uma Conta? Crie Aqui!</string>
    <string name="username">Nome</string>
    <string name="signup">Cadastrar</string>
    <string name="img">Foto</string>

    //String main_Menu
    <string name="item_config">Configuraçôes</string>
    <string name="item_sair">Sair</string>
    <string name="lupa">Lupa</string>
    <string name="addContato">Adicionar Contato</string>

    // Content Description
    <string name="contactPhoto">Foto do Contato</string>

    // Tela Conversa
    <string name="btnChat">Enviar</string>
    <string name="message">Digite a mensagem...</string>

</resources>
